[tool.poetry]
name = "zipt"
version = "0.1.0"
description = "Create a compressed zip file and specify its version"
authors = ["pkwarc"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
